--- a/exercises/test.html
+++ b/exercises/test.html
@@ -2,10 +2,11 @@
 <head>
 <title>Top 100</title>
 <body>
-<h1>Top 100 <h2>Dark Side of the Moon</h2>
+  <h1>Top 100</h1>
+<h2>Dark Side of the Moon</h2>
   <h3>Pink Floyd</h3>
-<p> There’s no dark side of the moon; matter of fact <q>it’s all dark. </p></q>
-<li>Us And Them</em>
+<p> There’s no dark side of the moon; matter of fact <q>it’s all dark.</q> </p>
+<ul> <em>Us And Them/em>
   <li>Any Colour You Like</li>
   <li>Brain Damage</li>
   <li>Eclipse</li>
@@ -14,7 +15,7 @@
   <h3>Coldplay</h2>
 <ol>
   <li>Square One <li>What If?
-</ul>
+</ol>
 </fixme>
 </body>
 </head>
